<resources>
    <string name="app_name">TowerDefenseECS</string>
    <!-- 在 strings.xml 中添加 -->
    <string name="gold_text">金币: %d</string>
    <string name="health_text">生命: %d</string>
    <string name="wave_text">波次: %d</string>
    <string name="pause_button">暂停</string>
    <string name="resume_button">继续</string>
    <string name="spawn_enemy">出怪</string>
    <string name="level_selection">开始游戏</string>
    <string name="game_name">Tower Defense</string>
    <string name="start_button">开始游戏</string>
    <string name="level_train">教学关\n</string>
    <string name="level_01">第一关\n</string>
    <string name="level_02">第二关\n</string>
    <string name="level_list">关卡列表\n</string>
    <string name="settings">设置</string>
    <string name="supply_number">50</string>
    <string name="manpower_number">100</string>
    <string name="Grenadier">掷弹兵</string>
    <string name="artillery">炮兵</string>
    <string name="infantry">步兵</string>
    <string name="PauseGame">游戏暂停</string>
    <string name="BackGame">回到游戏</string>
    <string name="RestartGame">重新开始</string>
    <string name="BacktoMainMenu">返回主菜单</string>
    <string name="NextLevel">下一关</string>
    <string name="BacktoMain">返回</string>
    <string name="init_manpower">50</string>
    <string name="init_supply">50</string>
    <string name="deploy">部署模式</string>
    <string name="tutorial_title">教程标题</string>
    <string name="tutorial_content">教程内容</string>
    <string name="hint">提示信息</string>
    <string name="build_remove">取消部署</string>
    <string name="quit_game">退出游戏</string>
</resources>