<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    android:padding="24dp">

    <!-- 标题 -->
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PauseGame"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="24dp" />

    <!-- 回到游戏按钮 -->
    <Button
        android:id="@+id/btnResume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BackGame"
        android:textColor="@android:color/black"
        android:background="@drawable/button_pause_menu"
        android:layout_marginBottom="12dp"
        android:textSize="16sp" />

    <!-- 重新开始按钮 -->
    <Button
        android:id="@+id/btnRestart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RestartGame"
        android:textColor="@android:color/black"
        android:background="@drawable/button_pause_menu"
        android:layout_marginBottom="12dp"
        android:textSize="16sp" />
    <!--
       进入下一关按钮
       - 默认设置为 android:visibility="gone"，在游戏胜利时通过代码显示
       - 位于“重新开始”和“返回主菜单”之间
     -->
    <Button
        android:id="@+id/btnNextLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NextLevel"
        android:textColor="@android:color/black"
        android:background="@drawable/button_pause_menu"
        android:layout_marginBottom="12dp"
        android:textSize="16sp"
        android:visibility="gone" />

    <!-- 返回主菜单按钮 -->
    <Button
        android:id="@+id/btnMainMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BacktoMainMenu"
        android:textColor="@android:color/black"
        android:background="@drawable/button_pause_menu"
        android:textSize="16sp" />

</LinearLayout>