<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tutorialOverlay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center_horizontal"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    android:background="@drawable/tutorial_background"
    android:padding="15dp"
    android:visibility="gone"
    android:gravity="center_horizontal"
    android:clickable="true"
    android:focusable="true"
    >

    <TextView
        android:id="@+id/tutorialTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_title"
        android:textColor="#FFFFFF"
        android:textSize="11sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tutorialMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_content"
        android:textColor="#FFFFFF"
        android:textSize="11sp"
        android:gravity="center"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/tutorialHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint"
        android:textColor="#FFFF00"
        android:textSize="11sp"
        android:textStyle="italic" />

</LinearLayout>